@@ -591,10 +591,24 @@ external direct_potrf :
   mat (* A *)
   -> int = "lacaml_NPRECpotrf_stub"
 
-let potrf ?n ?(up = true) ?(ar = 1) ?(ac = 1) a =
+let maybe_add_jitter ~loc ?jitter ~ar ~ac ~n a =
+  match jitter with
+  | None -> ()
+  | Some jitter when jitter < zero ->
+      invalid_arg (sprintf "%s: jitter < zero" loc)
+  | Some jitter when jitter = zero -> ()
+  | Some jitter ->
+      for i = 0 to n - 1 do
+        let ari = ar + i in
+        let aci = ac + i in
+        a.{ari, aci} <- add a.{ari, aci} jitter
+      done
+
+let potrf ?n ?(up = true) ?(ar = 1) ?(ac = 1) ?jitter a =
   let loc = "Lacaml.Impl.NPREC.potrf" in
   let uplo_char = get_uplo_char up in
   let n = get_n_of_a loc ar ac a n in
+  maybe_add_jitter ~loc ?jitter ~ar ~ac ~n a;
   let info = direct_potrf uplo_char n ar ac a in
   if info <> 0 then
     if info > 0 then potrf_chol_err loc info
@@ -616,11 +630,11 @@ external direct_potrs :
 
 let potrs
       ?n ?(up = true) ?(ar = 1) ?(ac = 1) a ?nrhs ?(br = 1) ?(bc = 1)
-      ?(factorize = true) b =
+      ?(factorize = true) ?jitter b =
   let loc = "Lacaml.Impl.NPREC.potrs" in
   let uplo_char = get_uplo_char up in
   let n, nrhs = xxtrs_get_params loc ar ac a n br bc b nrhs in
-  if factorize then potrf ~n ~up ~ar ~ac a;
+  if factorize then potrf ~n ~up ~ar ~ac ?jitter a;
   let info = direct_potrs uplo_char n nrhs ar ac a br bc b in
   if info <> 0 then potrs_err loc n nrhs a b info
 
@@ -634,11 +648,11 @@ external direct_potri :
   mat (* A *)
   -> int = "lacaml_NPRECpotri_stub"
 
-let potri ?n ?(up = true) ?(ar = 1) ?(ac = 1) ?(factorize = true) a =
+let potri ?n ?(up = true) ?(ar = 1) ?(ac = 1) ?(factorize = true) ?jitter a =
   let loc = "Lacaml.Impl.NPREC.potri" in
   let n = get_n_of_a loc ar ac a n in
   let uplo_char = get_uplo_char up in
-  if factorize then potrf ~n ~up ~ar ~ac a;
+  if factorize then potrf ~n ~up ~ar ~ac ?jitter a;
   let info = direct_potri uplo_char n ar ac a in
   if info <> 0 then
     if info > 0 then xxtri_lu_err loc info
