@@ -1,3 +1,5 @@
+2008-09-17:  Added optional jitter argument to potrf, potrs, and potri.
+
 2008-09-08:  !!! WARNING WARNING WARNING WARNING WARNING WARNING WARNING !!!
 
              potri and potrs now implicitly call potrf by default!
